# DiscoGB

./: Cargo.toml  README.md
src/: gameboy.rs  lib.rs  main.rs
src/cpu/: instructions.rs  mod.rs  registers.rs
src/cpu/instructions/: arithmetic.rs  bitwise.rs  jump.rs  load.rs  mod.rs  prefixed.rs
src/gameboy/: mod.rs
src/gameboy/cpu/: mod.rs  registers.rs
src/gameboy/cpu/instructions/: mod.rs  util.rs
src/gameboy/cpu/instructions/alu/: x16.rs  x8.rs
src/gameboy/cpu/instructions/control/: br.rs  misc.rs  mod.rs
src/gameboy/cpu/instructions/lsm/: mod.rs  x16.rs  x8.rs
src/gameboy/cpu/instructions/rsb/: mod.rs  x8.rs
src/gameboy/memory/: mod.rs
src/gui/: mod.rs
src/memory/: mod.rs
