[package]
name = "discogb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "test_benchmark"
harness = false
