[package]
name = "discogb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
egui_extras = "0.22.0"
egui_grid = "0.2.0"


[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "test_benchmark"
harness = false
